[tool.isort]
profile = 'black'
multi_line_output = 3

[tool.mypy]
show_error_codes = true
strict = true

[[tool.mypy.overrides]]
module = [
  "pythonjsonlogger",
  "pythonjsonlogger.jsonlogger",
]
ignore_missing_imports = true

[tool.poetry]
name = "src"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "AGPL"
exclude = ["**/*_test.py", "**/conftest.py"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
playwright = "^1.29.1"
fastapi = {extras = ["standard"], version = "^0.89.1"}
uvicorn = {extras = ["standard"], version = "^0.20.0"}
python-json-logger = "^2.0.4"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
pytest = "^7.2.0"
python-lsp-server = "^1.7.0"
mypy-ls = "^0.5.1"
pyls-isort = "^0.2.2"
python-lsp-black = "^1.2.1"
pyflakes = "^3.0.1"
mypy = "^0.991"
httpx = "^0.23.3"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
